--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,20 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .gridContainer {
+    height: 100%;
     display: grid;
 
     grid-template-columns: auto 1fr;
-    grid-template-rows: repeat(2,auto) 1fr;
+    grid-template-rows: 10% 1fr 10%;
     grid-template-areas: 
     "header header "
     "bar main"
     "footer footer";
-
-
 }
 
 .item1 {
@@ -51,14 +57,17 @@
 .item5 {
     grid-area: option;
     border-style: dotted;
+    padding: 1fr;
 }
 
 .item6 {
     grid-area: input;
     border-style: dashed;
+    padding: 1fr;
 }
 
 .item7 {
     grid-area: output;
     border-style: solid;
+    padding: 5fr;
 }
