Added structure data, decryption. TODO: bugs related to add, profile and decryption algorithms implementation, and sort by time

--- a/frontend/websockets/frontend/main.css
+++ b/frontend/websockets/frontend/main.css
@@ -30,6 +30,9 @@
     word-break: break-all;
  }
   
+ .text-decrypt {
+  word-break: break-all;
+}
   /* The Close Button */
   .close {
     color: #aaa;
