--- a/react-app/src/Components/modal.css
+++ b/react-app/src/Components/modal.css
@@ -1,8 +1,8 @@
 body {
   background: #eee;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
 }
 
 .modalContainer {
