Added: tags query

--- a/react-app/src/Components/modal.css
+++ b/react-app/src/Components/modal.css
@@ -77,6 +77,15 @@ body {
   line-height: 1;
 }
 
+.entry {
+  text-decoration-line: underline; 
+  text-decoration-style: dotted;
+  border: 0rem;
+  background-color: #eee;
+  color: black;
+  width: 80%;
+}
+
 #centered-toggle-button {
   position: absolute;
 }
