--- a/react-app/src/Components/modal.css
+++ b/react-app/src/Components/modal.css
@@ -2,7 +2,9 @@
 
 :root {
   --backColor: white;
-  --headerColor: rgb(13, 86, 196);
+  --headerColor:grey;
+  --mainColor:lightgray;
+  --accept: lightgreen;
 }
 
 body {
@@ -28,14 +30,14 @@ body {
 }
 
 .front .header .btnNotSelected {
-  background-color: grey;
-  border: 3px solid grey;
+  background-color: var(--headerColor);
+  border: 3px solid var(--headerColor);
   padding: 5% 0% 5% 0%;
 }
 
 .front .header .btnSelected {
-  background-color:lightgray;
-  border: 3px solid grey;
+  background-color: var(--mainColor);
+  border: 3px solid var(--headerColor);
   padding: 5% 0% 5% 0%;
   border-bottom: none;
 }
@@ -43,20 +45,20 @@ body {
 .front form {
   display: flex;
   flex-direction: column;
-  background-color: lightgray;
-  border: 3px solid grey;
+  background-color: var(--mainColor);
+  border: 3px solid var(--headerColor);
   border-top:none;
 }
 
 .front form input {
-  background-color: lightgray;
+  background-color: var(--mainColor);
   padding: 2% 0% 2% 0%;
   border: none;
   border-bottom: 2px dotted black;
 }
 
 .front form .feet button {
-  background-color: lightgreen;
+  background-color: var(--accept);
   border: none;
   padding: 2% 0% 2% 0%;
   margin-top: 2%;
@@ -71,19 +73,108 @@ body {
 /* BACKPAGE */
 
 .back {
-    position: fixed;
-    top: 3%;
-    left: 3%;
-    width:94%;
+  position: fixed;
+  top: 3%;
+  left: 3%;
+  width:94%;
 }
 
 .back .logout {
   position: fixed;
-  top: 5%;
-  left:85%;
+  top: 3%;
+  left:90%;
+  padding: 2px 2px 2px 2px;
   background-color: rgb(233, 173, 173);
-  border: 3px solid var(--headerColor);
+  border: 3px solid rgb(233, 173, 173);
+}
 
+.back .main {
+  background-color: var(--mainColor);
+  position:sticky;
+  top:0%;
+  width: 90%;
+  display:flex;
+  flex-direction: column;
+  border: 4px solid var(--headerColor);
+}
+
+.back .preference {
+  background-color: var(--mainColor);
+  position:sticky;
+  top:0%;
+  width: 90%;
+  display:flex;
+  flex-direction: column;
+  border: 4px solid var(--headerColor);
+}
+
+.back .preference .header {
+  position:sticky;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.back .main .header {
+  position:sticky;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.back .preference .header .btnNotSelected {
+  background-color: var(--headerColor);
+  border: 3px solid var(--headerColor);
+  padding: 1% 0% 1% 0%;
+  border: 4px solid var(--headerColor);
+  border-bottom: none;
+  margin:none;
+}
+.back .main .header .btnNotSelected {
+  background-color: var(--headerColor);
+  border: 3px solid var(--headerColor);
+  padding: 1% 0% 1% 0%;
+  border: 4px solid var(--headerColor);
+  border-bottom: none;
+  margin:none;
+}
+.back .preference .header .btnSelected {
+  background-color: var(--mainColor);
+  border: 3px solid var(--mainColor);
+  padding: 5% 0% 5% 0%;
+}
+.back .main .header .btnSelected {
+  background-color: var(--mainColor);
+  border: 3px solid var(--mainColor);
+  padding: 5% 0% 5% 0%;
+  border-bottom: none;
+}
+
+.back .main .body {
+  position: relative;
+  top:3%;
+  left:3%;
+  width: 94%;
+  display: flex;
+  flex-direction: column;
+}
+.back .preference .body {
+  display: flex;
+  flex-direction: column;
+}
+.back .main .body h2 {
+  margin-left: 3%;
+}
+.back .main .body .adding {
+  background-color: #78f89f;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.back .main .body .adding .newel{
+  display: flex;
+  flex-direction: column;
+}
+.back .main .body .adding .newel button {
+  background-color: var(--accept);
+  border: 1px solid black;
+  border: 1px solid black;
 }
 
 /* MODAL */
