--- a/react-app/src/Components/modal.css
+++ b/react-app/src/Components/modal.css
@@ -1,4 +1,9 @@
 /* ALL */
+* {
+  margin: 0;
+  padding: 0;
+  font-family:Arial, Helvetica, sans-serif;
+}
 
 :root {
   --backColor: white;
@@ -9,13 +14,12 @@
 
 body {
   background: var(--backColor);
-  display: flex;
 }
 
 /* FRONTPAGE */
 
 .front {
-  position: fixed;
+  position: absolute;
   top: 25%;
   left: 40%;
   width:20%;
@@ -73,7 +77,7 @@ body {
 /* BACKPAGE */
 
 .back {
-  position: fixed;
+  position: sticky;
   top: 3%;
   left: 3%;
   width:94%;
@@ -125,6 +129,7 @@ body {
   border: 4px solid var(--headerColor);
   border-bottom: none;
   margin:none;
+  font-size: large;
 }
 .back .main .header .btnNotSelected {
   background-color: var(--headerColor);
@@ -133,26 +138,30 @@ body {
   border: 4px solid var(--headerColor);
   border-bottom: none;
   margin:none;
+  font-size: large;
 }
 .back .preference .header .btnSelected {
   background-color: var(--mainColor);
   border: 3px solid var(--mainColor);
   padding: 5% 0% 5% 0%;
+  font-size: large;
 }
 .back .main .header .btnSelected {
   background-color: var(--mainColor);
   border: 3px solid var(--mainColor);
   padding: 5% 0% 5% 0%;
   border-bottom: none;
+  font-size: large;
 }
 
 .back .main .body {
-  position: relative;
-  top:3%;
-  left:3%;
+  position: sticky;
+  top:6%;
+  left:6%;
   width: 94%;
   display: flex;
   flex-direction: column;
+  background-color: #78f89f;
 }
 .back .preference .body {
   display: flex;
@@ -160,11 +169,14 @@ body {
 }
 .back .main .body h2 {
   margin-left: 3%;
+  border-bottom: 3px solid black;
 }
 .back .main .body .adding {
-  background-color: #78f89f;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  background-color: var(--mainColor);
+  display: flex;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  position: sticky;
 }
 
 .back .main .body .adding .newel{
@@ -172,12 +184,49 @@ body {
   flex-direction: column;
 }
 .back .main .body .adding .newel button {
-  background-color: var(--accept);
-  border: 1px solid black;
+  background-color: var(--headerColor); 
   border: 1px solid black;
 }
 
+.back .main .body .query {  
+  display: grid;
+  grid-template-columns: 9fr 1fr;
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+
+.back .main .body .query button {
+  background-color: var(--accept);
+  border: none;
+  border: 1px solid black;
+}
+
+.back .main .body .query textarea {
+  text-decoration-line: underline; 
+  text-decoration-style: dotted;
+  border: 0rem;
+  background-color: var(--backColor);
+  color: black;
+  height: 40px;
+  border: 1px solid black;
+}
+
+.back .main .feet {
+  position: sticky;
+  top:6%;
+  left:6%;
+  width: 94%;
+  display: flex;
+  flex-direction: column;
+  word-break: all;
+  background-color: yellow;
+}
+
+.back .main .feet h2 {
+  margin-left: 3%;
+  border-bottom: 3px solid black;
 /* MODAL */
+}
 
 .modalContainer {
     position: fixed;
@@ -201,7 +250,7 @@ body {
   transform: scale(1);
   opacity: 1;
   visibility: visible;
-  position: absolute;
+  position:absolute;
   top: 30%;
   left: 25%;
   display: flex;
@@ -254,18 +303,7 @@ body {
   line-height: 1;
 }
 
-.entry {
-  text-decoration-line: underline; 
-  text-decoration-style: dotted;
-  border: 0rem;
-  background-color: #eee;
-  color: black;
 
-}
-textarea {
-  width: 500px;
-  height:100px; 
-}
 
 #centered-toggle-button {
   position: absolute;
