--- a/react-app/src/modal.css
+++ b/react-app/src/modal.css
@@ -1,3 +1,11 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  --accept: lightgreen;
+  font-size: medium;
+  padding: 0;
+  margin: 0;
+}
+
 /* MODAL */
 .modalContainer {
     position: fixed;
@@ -15,7 +23,7 @@
   width: 80vw;
   z-index: 2;
   background: white;
-  border: 1px solid #ccc;
+  border: 2px solid black;
   transition: 1.1s ease-out;
   box-shadow: -2rem 2rem 2rem rgba(0, 0, 0, 0.2);
   filter: blur(0);
@@ -51,9 +59,9 @@
   }
 }
 .modal .head {
+  margin-top: 3vh;
   border-bottom: 1px solid #ccc;
   padding: 1rem;
-  margin: 0;
   word-break: break-all;
 }
 .modal .content {
@@ -61,20 +69,108 @@
   max-width: inherit;
   word-break: break-all;
 }
+
+.modal .contentkeys {
+  padding: 1rem;
+  max-width: inherit;
+  word-break: break-all;
+  overflow-y: scroll;
+  max-height: 15vh;
+}
+
+.modal .content button {
+background-color: var(--accept);
+padding: auto;
+border: none;
+cursor: pointer;
+}
+
+.modal .content form {
+  display: grid;
+  grid-template: 1fr / 9fr 1fr ;
+}  
+
+.modal .contentkeys .keyoptions {
+    margin-left: 3vw;
+    margin-top: 2vh;
+}  
+
+.modal .contentkeys .keyoptions .check {
+  cursor: pointer;
+}  
+
 .modal .actions {
   border-top: 1px solid #ccc;
   background: #eee;
   padding: 0.5rem 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
+
 .modal .actions button {
   border: 0;
-  background: #78f89f;
+  background:lightcoral;
   border-radius: 5px;
   padding: 0.5rem 1rem;
   font-size: 0.8rem;
   line-height: 1;
+  cursor: pointer;
 }
 
-#centered-toggle-button {
-  position: absolute;
+
+.modal .actions-results {
+  border-top: 1px solid #ccc;
+  background: #eee;
+  padding: 0.5rem 1rem;
+  display: flex;
+  flex-direction: column;  
+  align-items: stretch; 
+}
+
+.modal .actions-results #actions-results-con {
+  display: flex;
+  justify-content: center;
+}
+
+.modal .actions-results #actions-results-con button {
+  border: 0;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  line-height: 1;
+  background-color: gray;
+  width: 100%;
+  text-align: center;
+  cursor: pointer;
+}
+.modal .actions #accept{
+  background-color:var(--accept) !important;
+}
+
+.modal #closemodal {
+  border: 0;
+  background-color:lightcoral;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  font-size: 0.8rem;
+  line-height: 1;
+  position: fixed;
+  top: 5%;
+  left:95%;
+  width: max-content;
+  cursor: pointer;
+}
+
+.modal .contenttrytes {
+  padding: 1rem;
+  max-width: inherit;
+  word-break: break-all;
+  overflow-y: scroll;
+  max-height: 50vh;
+  
+}
+
+.modal select {
+  overflow: hidden;
+  border: none;
 }
